# LLM_clone_human

./: README.md  pyproject.toml
app/: directoryList.md  llm_assementmodel_predictions_comparison.xlsx
app/history/20241109_1/: genarate.py
app/history/20241109_1/289539715_按序号_【24-FAL】(DAY1) 中国大五人格问卷简版（CBF-PI-B）[复制]_5_5/: result_13271097380.json  result_15184350845.json  result_18130498995.json
app/history/20241109_1/chatgpt-4o-latest/: llm_result_13271097380.json  llm_result_13800008963.json  llm_result_13812341234.json  llm_result_15184350845.json  llm_result_18130498995.json
app/history/20241109_1/glm-4-Flash/: llm_result_13271097380.json  llm_result_13800008963.json  llm_result_13812341234.json  llm_result_15184350845.json  llm_result_18130498995.json
app/history/20241109_1/gpt-3.5-turbo/: llm_result_13271097380.json  llm_result_13800008963.json  llm_result_13812341234.json  llm_result_15184350845.json  llm_result_18130498995.json
app/llm_assement/: assement.py  data_prepare.py  heat.py  model_predictions_comparison.xlsx  model_results_axis.xlsx  mystatistics.py  other.py  result.py  similarity_matrix.xlsx  weight.py  所有项相似矩阵.xlsx  推理题项记录.xlsx  维度均方误差.xlsx
app/llm_gen/: ChatSky.py  chatGLM.py  chatGPT.py  chatMoonShot.py  chatYiLarge.py  check.py  genarate.py  modelList.json  progress.json  template.py
app/llm_gen/data/: llm_result_1.json  source_result_1.json
app/source_handle/: handle_source.py
app/source_handle/source_data/: 289538440_按序号_艾森克人格问卷(EPQ-RSC)[复制]_5_5.xlsx  289539715_按序号_【24-FAL】(DAY1) 中国大五人格问卷简版（CBF-PI-B）[复制]_5_5.xlsx
(+111 files in other folders)
