[tool.poetry]
name = "llm-clone-human"
version = "0.1.0"
description = ""
authors = ["Haohanblue <haohanblue@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zhipuai = "^2.1.5.20230904"
openai = "^1.54.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
